--- a/index.html
+++ b/index.html
@@ -163,11 +163,7 @@
           <label><input type="checkbox"> Veritas</label>
           <label><input type="checkbox"> Kinepolis</label>
         </div>
-          <div>• <a href="https://www.lush.com/nl/nl/" target="_blank">Lush</a></div>
-          <div>• <a href="https://wondr.care" target="_blank">Wondr</a></div>
-          <div>• Veritas</div>
-          <div>• Kinepolis</div>
-        </div>
+
       </div>
     </div>
   </section>
@@ -183,8 +179,8 @@
 </div>
 
 <script>
-  const GITHUB_OWNER = "YOUR_GITHUB_USERNAME";
-  const GITHUB_REPO  = "YOUR_REPO_NAME";
+  const GITHUB_OWNER = "AmaaniL";
+  const GITHUB_REPO  = "Wenslijst";
   const FILE_PATH    = "index.html";
 
   function formatDate(iso){
@@ -231,7 +227,7 @@
   }
 
   setDate();
-  // Accessibility + LocalStorage persistence for checkboxes
+
   document.addEventListener('DOMContentLoaded', () => {
     const boxes = document.querySelectorAll('.wish-check, .sublist input[type="checkbox"]');
     boxes.forEach((box, i) => {
